PXP-2030: Fix issue that paypal theme is not responsive to page size

--- a/templates/src/components/life-field-datepicker/lifeFieldDatePicker.css
+++ b/templates/src/components/life-field-datepicker/lifeFieldDatePicker.css
@@ -3,3 +3,9 @@
     width: 50%;
     margin-bottom: 8px;
 }
+
+@media only screen and (max-width: 767px) {
+    .life-element-date-picker-container {
+        width: 100%;
+    }
+}
