--- a/templates/src/themes/paypal/paypal.css
+++ b/templates/src/themes/paypal/paypal.css
@@ -13,14 +13,14 @@
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 768px) {
-    .customer-section {
+    .additional-info-section, .payment-section {
         width: 468px;
         padding: 26px 32px 0 32px;
     }
 }
 
 @media only screen and (max-width: 767px) {
-    .customer-section {
+    .additional-info-section, .payment-section {
         width: 100%;
         order: 2;
         padding: 16px 32px;
